<resources>
    <string name="app_name">Procrastinator</string>
    <string name="labelButtonDebug">Debug</string>
    <string name="labelButtonListTasks">Tasks list</string>
    <string name="menuItemExport">Export</string>
    <string name="menuItemSetUser">Configure user</string>
    <string name="dialogSetUserTitle">Set user name</string>
    <string name="dialogSetUserInput">Jeremy or Noemie</string>
    <string name="taskLabelTitle">Title :</string>
    <string name="taskLabelContent">Content :</string>
    <string name="taskLabelCategory">Category :</string>
    <string name="taskLabelShared">Shared :</string>
    <string name="taskLabelRemindIn">Remind me in</string>
    <string name="taskLabelSetRemind">Pick a date</string>
    <string name="labelTaskButtonOneDay">1 day</string>
    <string name="labelTaskButtonThreeDays">3 days</string>
    <string name="labelTaskButtonOneWeek">1 week</string>
    <string name="labelTaskButtonOneMonth">1 month</string>
    <string name="labelTaskButtonSixMonths">6 months</string>
    <string name="labelTaskButtonOneYear">1 year</string>
    <string name="labelOk">OK</string>
    <string name="labelEdit">Edit</string>
    <string name="titleTaskAdd">Add new task</string>
    <string name="titleTaskEdit">Edit task</string>
    <string name="titleTaskRemind">Reminder</string>
    <string name="labelDelete">Delete</string>
    <string name="taskTitleError">Title cannot be empty</string>
    <string name="taskTimestampError">Date cannot be empty</string>
    <string name="switchOnlyMine">Only mine :</string>
</resources>